examples/type_system/failing/75_hm_if_non_bool_condition_compile_mismatch.flx
fn pick() -> Int {
    if 1 {
        10
    } else {
        20
    }
}

fn main() -> Unit with IO {
    print(to_string(pick()))
}
